Bug 128982 - NumPad Enter doesn't get recognized when Numlock is on
Summary: NumPad Enter doesn't get recognized when Numlock is on
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kglobalaccel
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Lubos Lunak
URL: https://git.reviewboard.kde.org/r/125...
Keywords:
Depends on:
Blocks:
 
Reported: 2006-06-11 06:55 UTC by Stephan Sokolow
Modified: 2015-10-19 20:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Sokolow 2006-06-11 06:55:05 UTC
Version:            (using KDE KDE 3.5.2)
Installed from:    Compiled From Sources
Compiler:          gcc (GCC) 3.4.5 (Gentoo 3.4.5-r1, ssp-3.4.5-1.0, pie-8.7.9) 
OS:                Linux

When I set WinKey+KP_Enter as a key combo (Windows Key + NumPad Enter) in KCMHotKeys, it works the same regardless of whether NumLock is set.

However, the combo only triggers the desired effect if NumLock is disabled. This is a major problem since I leave NumLock on all the time.
Comment 1 Thiago Macieira 2006-06-18 21:22:29 UTC
Run xev and paste the KeyPress and KeyRelease events that are shown when you press the Keypad Enter when both NumLock is on and off.
Comment 2 Stephan Sokolow 2006-06-18 21:34:46 UTC
===== Without Numlock =====

KeyPress event, serial 31, synthetic NO, window 0x4400001,
    root 0x117, subw 0x0, time 3902827569, (379,76), root:(385,633),
    state 0x0, keycode 108 (keysym 0xff8d, KP_Enter), same_screen YES,
"   XLookupString gives 1 bytes: (0d) "
"   XmbLookupString gives 1 bytes: (0d) "
    XFilterEvent returns: False

KeyRelease event, serial 31, synthetic NO, window 0x4400001,
    root 0x117, subw 0x0, time 3902827647, (379,76), root:(385,633),
    state 0x0, keycode 108 (keysym 0xff8d, KP_Enter), same_screen YES,
"   XLookupString gives 1 bytes: (0d) "
    XFilterEvent returns: False

===== With Numlock =====

KeyPress event, serial 31, synthetic NO, window 0x4400001,
    root 0x117, subw 0x0, time 3902866405, (413,24), root:(419,581),
    state 0x10, keycode 108 (keysym 0xff8d, KP_Enter), same_screen YES,
"   XLookupString gives 1 bytes: (0d) "
"   XmbLookupString gives 1 bytes: (0d) "
    XFilterEvent returns: False

KeyRelease event, serial 31, synthetic NO, window 0x4400001,
    root 0x117, subw 0x0, time 3902866476, (413,24), root:(419,581),
    state 0x10, keycode 108 (keysym 0xff8d, KP_Enter), same_screen YES,
"   XLookupString gives 1 bytes: (0d) "
    XFilterEvent returns: False
Comment 3 Thomas Lübking 2015-10-18 07:33:14 UTC
Still a problem, what's striking given numlock is stripped from the events...
Comment 4 Thomas Lübking 2015-10-19 20:31:52 UTC
Git commit 7c832dafdf9d19bef1024ef5e9d70a6e20707470 by Thomas Lübking.
Committed on 19/10/2015 at 20:31.
Pushed by luebking into branch 'master'.

Do not XOR Shift for KP_Enter

It has only one meaning
FIXED-IN: 5.16
REVIEW: 125689

M  +1    -0    src/runtime/plugins/xcb/kglobalaccel_x11.cpp

http://commits.kde.org/kglobalaccel/7c832dafdf9d19bef1024ef5e9d70a6e20707470