Do not XOR Shift for KP_Enter

It has only one meaning

BUG: 128982
FIXED-IN: 5.16
REVIEW: 125689